Update dark mode, repair and make new feature, and finishing

--- a/src/input.css
+++ b/src/input.css
@@ -1,19 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 .navbar-fixed {
-  @apply fixed z-[9999] bg-white bg-opacity-70;
-  backdrop-filter: blur(5px);
+  @apply fixed z-[9999] bg-white bg-opacity-70 backdrop-blur dark:bg-gray-800 dark:bg-opacity-50;
 }
 
 .hamburger-inline {
-  @apply w-[30px] h-[2px] my-2 block bg-gray-700;
+  @apply w-[30px] h-[2px] my-2 block bg-gray-700 dark:bg-white;
 }
 
 .hamburger-active > span:nth-child(1) {
@@ -26,4 +25,8 @@ body {
 
 .hamburger-active > span:nth-child(3) {
   @apply -rotate-45;
+}
+
+#dark-toggle:checked ~ label div.toggle-circle {
+  @apply translate-x-4;
 }
